kubernetes/apps/kube-system/headlamp/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - headlamp
  defaultBackend:
    service:
      name: headlamp
      port:
        number: 80
